忘了添加到package.json

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "ejs": "*",
     "mongodb": "*",
     "connect-mongo": "*",
-      "connect-flash": "*",
-      "request": "*",
-      "cheerio": "*",
-      "socket.io": "*",
-      "gm": "*",
-      "node-images": "*"
+    "connect-flash": "*",
+    "request": "*",
+    "cheerio": "*",
+    "socket.io": "*",
+    "gm": "*",
+    "node-images": "*",
+    "generic-pool":"*"
+
   }
 }
