添加异步处理模块：thenjs

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "socket.io": "*",
     "gm": "*",
     "node-images": "*",
-    "generic-pool":"*"
-
+    "generic-pool":"*",
+    "thenjs":"*"
   }
 }
